log
Thu 07 Sep 2023 07:21:47 PM UTC: 
 tests:  0|6
total_score: 0/70
89dad7a
Thu 07 Sep 2023 07:52:01 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5f79c9
Thu 07 Sep 2023 07:58:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
df85dfc
Thu 07 Sep 2023 08:01:03 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:7: error: unused variable ‘i’ [-Werror=unused-variable]
   45 |   int i = hash(key, map -> capacity);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
6cc2bd4
Thu 07 Sep 2023 08:04:45 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[i];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
74e36d7
Sat 09 Sep 2023 12:10:32 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:39: error: ‘i’ undeclared (first use in this function)
   47 |   Pair *current_pair = map -> buckets[i];
      |                                       ^
hashmap.c:47:39: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[i];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4699f12
Sat 09 Sep 2023 12:10:43 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e41a4af
Sat 09 Sep 2023 12:13:36 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:9: error: unused variable ‘new_pair’ [-Werror=unused-variable]
   55 |   Pair* new_pair = createPair(key, value);
      |         ^~~~~~~~
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5c5169e
Sat 09 Sep 2023 12:14:44 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:9: error: unused variable ‘current_pair’ [-Werror=unused-variable]
   47 |   Pair *current_pair = map -> buckets[posicion];
      |         ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ed0d8b4
Sat 09 Sep 2023 12:15:28 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
4483bb9
Sat 09 Sep 2023 12:17:09 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
3c39aac
Sat 09 Sep 2023 12:22:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4fb0e24
Sat 09 Sep 2023 12:30:35 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:85:34: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   85 |   if(map == NULL || key == NULL) return;
      |                                  ^~~~~~
hashmap.c:84:8: note: declared here
   84 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:90:55: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   90 |     if(is_equal(map -> buckets[posicion]-> key, key)) return;
      |                                                       ^~~~~~
hashmap.c:84:8: note: declared here
   84 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b57ab4
Sat 09 Sep 2023 12:35:06 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
6fa9226
Sat 09 Sep 2023 12:46:54 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 40/70
4c03d68
Sat 09 Sep 2023 12:57:00 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
03279a6
